--- a/real-cost-of-an-iphone/css/main.css
+++ b/real-cost-of-an-iphone/css/main.css
@@ -69,6 +69,11 @@ ul, li {
     list-style-type: none;
 }
 
+li:hover {
+    background-color: #f0f0f0;
+    cursor: pointer;
+}
+
 .wrapper {
     width: 90%;
     margin: 0 5%;
